@@ -1,4 +1,19 @@
 SUBDIRS = mpidep src test rudeconfig utils doc
 
+EXTRA_DIST = debian/changelog \
+	     debian/compat \
+	     debian/control \
+	     debian/copyright \
+	     debian/docs \
+	     debian/libmusic1.dirs \
+	     debian/libmusic1.install \
+	     debian/libmusic-dev.dirs \
+	     debian/libmusic-dev.install \
+	     debian/music-bin.dirs \
+	     debian/music-bin.install \
+	     debian/music-doc.dirs \
+	     debian/music-doc.doc-base \
+	     debian/rules
+
 dist-hook:
 	rm $(distdir)/TODO
